ZumZumFinancials_Dev1/src/objects/Expense_Sheet__c.object
<CustomObject>
    <fields>
        <fullName>Back_Dated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Back Dated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claim_No__c</fullName>
        <label>Claim No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Number__c</fullName>
        <label>Month Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Gross__c</fullName>
        <label>Total Gross</label>
        <summarizedField>Expense_Sheet_Detail__c.Total_Gross__c</summarizedField>
        <summaryForeignKey>Expense_Sheet_Detail__c.Expense_Sheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Miles__c</fullName>
        <label>Total Miles</label>
        <summarizedField>Expense_Sheet_Detail__c.Miles__c</summarizedField>
        <summaryForeignKey>Expense_Sheet_Detail__c.Expense_Sheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Net__c</fullName>
        <label>Total Net</label>
        <summarizedField>Expense_Sheet_Detail__c.Total_Net__c</summarizedField>
        <summaryForeignKey>Expense_Sheet_Detail__c.Expense_Sheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_VAT__c</fullName>
        <label>Total VAT</label>
        <summarizedField>Expense_Sheet_Detail__c.Total_VAT__c</summarizedField>
        <summaryForeignKey>Expense_Sheet_Detail__c.Expense_Sheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Expense Sheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Claim_No__c</columns>
        <columns>Month_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Gross__c</columns>
        <columns>Total_Miles__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Expense Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Sheet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>